Fixed overflow for breakouts

--- a/htdocs/css/oldie/styles.css
+++ b/htdocs/css/oldie/styles.css
@@ -1,54 +1,106 @@
 * { margin: 0; padding: 0; }
+
 *, *:before, *:after { box-sizing: border-box; }
+
 * + h1, * + h2, * + h3, * + h4, * + p, * + dl, * + ul, * + ol, * + li, * + dt, * + form, * + table, * + section, * + blockquote { margin-top: 1em; }
+
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }
+
 h1 { font-size: 3em; }
+
 h2 { font-size: 2em; }
+
 h3 { font-size: 1.5em; }
+
 h4 { font-size: 1em; }
+
 blockquote, li { margin-left: 3em; }
+
 dt { font-weight: bold; }
+
 dl { margin-left: 1em; }
-a { -webkit-user-select: none; -webkit-touch-callout: none; }
+
+a { }
+
 a img { border: none; }
+
 a[href^="tel"]:link, a[href^="tel"]:visited, a[href^="tel"]:hover { color: inherit; text-decoration: inherit; }
+
 img { -ms-interpolation-mode: bicubic; }
+
 img, video, audio { max-width: 100%; }
+
 select, button { cursor: pointer; }
+
 form, input, select, textarea, button { font: inherit; }
+
 fieldset { padding: 0.5em; }
+
 optgroup option { margin-left: 1em; }
+
 textarea { overflow: auto; resize: vertical; }
-input [type="search"] { -webkit-appearance: none; }
+
+input [type="search"] { }
+
 input [type="hidden"], input [hidden] { display: none; }
+
 [hidden] { display: none; }
+
 table { font-size: 1em; border-collapse: collapse; border-spacing: 0; }
+
 table td, table th { font-size: 1em; vertical-align: top; text-align: left; }
+
 h1 { font: normal 700 28px/1.2 Garamond, serif; }
+
 h2 { font: normal 700 21px/1.2 Garamond, serif; }
+
 h3 { font: normal 700 14px/1.2 Garamond, serif; }
+
 h4 { font: normal 700 12px/1.2 Helvetica, Arial, sans-serif; }
+
 a { color: #c40000; }
+
 a:focus, a:hover { color: #ff9191; }
+
 strong { font-weight: 700; }
+
 dl dt { font-weight: 700; }
+
 form .form-field.required label:after { content: "*"; }
+
 form label { display: inline-block; width: 20%; }
+
 table { table-layout: fixed; width: 100%; }
+
 table th { font-weight: 700; }
+
 table th.no-break, table td.no-break { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+
 table th.number, table td.number { font-family: "Courier New", monospace; text-align: right; }
+
 .browsehappy { display: none; }
+
 html { font-size: 8px; }
-body { direction: ltr; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font: normal 400 12px/1.2 Helvetica, Arial, sans-serif; }
+
+body { direction: ltr; font: normal 400 12px/1.2 Helvetica, Arial, sans-serif; }
+
 #container { margin: auto; }
+
 #banner { font: normal 700 28px/1.2 Garamond, serif; padding: 12px; }
+
 #navigation { padding: 12px; }
+
 #main { font: normal 400 12px/1.2 Helvetica, Arial, sans-serif; padding: 12px; }
+
 #main .columns__container { margin: 0 calc(-12px - 10px); }
+
 #aside { font: normal 400 12px/1.2 Helvetica, Arial, sans-serif; padding: 12px; }
+
 #footer { padding: 12px; }
-@media screen { body { color: #000000; background-color: #e6e6e6; }
+
+@media screen { body, html { overflow-x: hidden; }
+  html { height: 100%; margin-bottom: 1px; }
+  body { color: #000000; background-color: #e6e6e6; }
   #container { color: #ffffff; background-color: #000000; }
   #banner { color: #ffffff; background-color: #000000; text-align: center; }
   #navigation { color: #000000; background-color: #ffffff; text-align: center; }
@@ -59,33 +111,49 @@ body { direction: ltr; -webkit-font-smoothing: antialiased; -moz-osx-font-smooth
   .columns { float: left; margin-left: 10px; margin-right: 10px; }
   .columns--raw { margin-left: 0; margin-right: 0; }
   .columns__container { margin-left: -10px; margin-right: -10px; } }
+
 @media screen { #container { max-width: 300px; } }
+
 @media screen { #container { max-width: 620px; } }
+
 @media screen { #container { max-width: 940px; } }
+
 @media screen { #container { max-width: 1260px; } }
+
 @media screen { .columns { width: 300px; }
   .columns--4-1 { width: 300px; }
   .columns--4-2 { width: 620px; }
   .columns--4-3 { width: 940px; }
   .columns--4-4 { width: 1260px; } }
+
 @media screen { .columns--3-1 { width: 300px; }
   .columns--3-2 { width: 620px; }
   .columns--3-3 { width: 940px; } }
+
 @media screen { .columns--2-1 { width: 300px; }
   .columns--2-2 { width: 620px; } }
+
 @media screen { .columns--1-1 { width: 300px; } }
+
 @media screen {
+  
   .columns__container { zoom: 1; }
   .columns__container:after { display: block; visibility: hidden; height: 0; clear: both; content: " "; }
   #navigation ul, #footer ul { display: block; list-style: none; text-align: center; }
   #navigation ul li, #footer ul li { display: inline-block; margin: 0; padding: 0; vertical-align: top; }
+  
+  
   }
+
 @media screen { .browsehappy { z-index: 2; position: fixed; width: 100%; background-color: #ffffdd; color: #000000; padding: 0.5em; width: 100%; top: 0; left: 0; border-bottom: 1px solid #eeeeee; text-align: center; display: block; }
   .browsehappy a { color: blue; } }
-@media print { * { color: black !important; background: transparent !important; text-shadow: none !important; -webkit-filter: none !important; filter: none !important; -ms-filter: none !important; }
+
+@media print { * { color: black !important; background: transparent !important; text-shadow: none !important; filter: none !important; -ms-filter: none !important; }
   @page { margin: 0.5cm; }
   h1, h2, h3, h4 { page-break-after: avoid; }
   h1, h2, h3, h4, p, li, tr, img { page-break-inside: avoid; }
   thead { display: table-header-group; }
   img { max-width: 100% !important; }
   #navigation { display: none; } }
+
+
